--- a/source-code/RestaurantReservation/RestaurantReservation.API/RestaurantReservation.API.csproj
+++ b/source-code/RestaurantReservation/RestaurantReservation.API/RestaurantReservation.API.csproj
@@ -11,12 +11,13 @@
     <PackageReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.2.0" PrivateAssets="All" />
     <PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="3.1.0" />
-    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.1.0" />
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.1.1" />
     <PackageReference Include="NHibernate" Version="5.2.6" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\RestaurantReservation.Infrastructure\RestaurantReservation.Infrastructure.csproj" />
+    <ProjectReference Include="..\RestaurantReservation.IoC\RestaurantReservation.IoC.csproj" />
   </ItemGroup>
 
 </Project>
