--- a/source-code/RestaurantReservation/RestaurantReservation.DomainServices/RestaurantReservation.DomainServices.csproj
+++ b/source-code/RestaurantReservation/RestaurantReservation.DomainServices/RestaurantReservation.DomainServices.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
+    <TargetFramework>netcoreapp3.1</TargetFramework>
     <UserSecretsId>c5c846a2-87cd-4eb1-a2c9-062df7922b94</UserSecretsId>
   </PropertyGroup>
 
